Fix: Dark Mode

--- a/src/input.css
+++ b/src/input.css
@@ -9,10 +9,10 @@ body {
 
 @layer components {
     .btn {
-        @apply focus:ring-4 focus:outline-none focus:ring-offset-teal-500 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0;
+        @apply focus:ring-4 focus:outline-none focus:ring-offset-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0;
     }
     .btn-primary {
-        @apply text-white bg-white hover:bg-opacity-95 dark:bg-primary dark:focus:ring-primary-20 dark:text-white dark:hover:bg-primary-70;
+        @apply text-white bg-primary hover:bg-opacity-95 focus:ring-primary-20 hover:bg-primary-70 transition-all duration-150;
     }
     .nav-mobile {
         @apply flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-base md:font-medium;
@@ -21,7 +21,7 @@ body {
         @apply block py-2 pr-4 pl-3 text-white bg-primary rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-primary;
     }
     .nav-content {
-        @apply block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:dark:hover:text-primary dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700;
+        @apply block py-2 pr-4 pl-3 text-primary-90 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-primary-40 md:p-0 md:dark:hover:text-primary dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700;
     }
     .search {
         @apply block p-2 pl-10 w-full text-gray-900 bg-gray-50 rounded-lg border border-gray-300 sm:text-sm focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500;
